
public static class Constants
{
    public static string GameSceneName = "Game";
    public static string StartMenuSceneName = "StartMenu";

    public static string PlayerTag = "Player";

    public static string StepAudioClipName = "Step";
    public static string CarPassingByAudioClipName = "CarPassingBy";
    public static string DeathAudioClipName = "Die";
    public static string JumpAudioClipName = "Jump";
    public static string RollAudioClipName = "Roll";
    public static string TurnAudioClipName = "Turn";


    public static string JumpAnimationTriggerName = "Jump";
    public static string RollAnimationTriggerName = "Roll";
    public static string DieAnimationTriggerName = "Die";
    public static string AnimationSpeedKey = "Speed";
    public static string AnimationIsGroundedKey = "IsGrounded";

    public static string CurveShaderBendAmountPropertyName = "_BendAmount";
    public static string CurveShaderBendOriginPropertyName = "_BendOrigin";
}
